--- a/references.bib
+++ b/references.bib
@@ -96,3 +96,30 @@
 	keywords = {bicycle, traffic, fremont, seattle, counts, bike counts, bike},
 	file = {Snapshot:/Users/cooperj2/Zotero/storage/P8D8X4T6/2648564.html:text/html},
 }
+
+
+@misc{lele_morphological_2022,
+	title = {Morphological measurements in a coastal {Ecuadorian} avifauna},
+	url = {https://zenodo.org/records/6511860},
+	abstract = {This dataset contains measurement of six morphological variables in 3444 individual birds. These birds were captured using mist-nets in the Reserva Jama-Coaque, operated by the Third Millennium Alliance, Manabí, Ecuador (0° 6' 57.75" S, 80° 7' 28.20" W)  Data were collected in 2018 and 2019. The variables included here are unflattened wing chord, length of longest retrix, bill length from nares to tip, bill width at nares, bill depth at nares, and weight, as described in Pyle (1997). Also included are measurements of elevation of the sites at which birds were captured, and age and sex characteristics, when these could be determined.},
+	urldate = {2025-07-15},
+	publisher = {Zenodo},
+	author = {Lele, Abhimanyu and Garrod, Holly and Ferguson, Euan and Azahara Prieto Gil, Carmen and Ellis, Mike},
+	month = may,
+	year = {2022},
+	keywords = {Bill morphology, Birds (Aves), comparative morphology},
+	file = {Snapshot:/Users/cooperj2/Zotero/storage/GZNHXSSW/6511860.html:text/html},
+}
+
+
+@misc{centre_counts_2025,
+	title = {Counts hourly pay {Adzuna} jobs},
+	url = {https://zenodo.org/records/14771706},
+	abstract = {This panel dataset provides a count of the number of Adzuna vacancies that offer an hourly pay rate, by Travel to Work Area (TTWA) and month. Its function is to provide labour market insights into the number of entry-level job offers - as proxied by hourly paying employment – at a high frequency and spatial granularity. TTWAs are geographies created by ONS to approximate self-contained labour market areas. The dataset covers 3 ITL1 regions: Scotland, Wales and North West England.},
+	urldate = {2025-07-15},
+	publisher = {Zenodo},
+	author = {Urban Big Data Centre, },
+	month = jan,
+	year = {2025},
+	file = {Snapshot:/Users/cooperj2/Zotero/storage/X49Q6ZCI/14771706.html:text/html},
+}
