--- a/references.bib
+++ b/references.bib
@@ -123,3 +123,21 @@
 	year = {2025},
 	file = {Snapshot:/Users/cooperj2/Zotero/storage/X49Q6ZCI/14771706.html:text/html},
 }
+
+@article{ruxton_unequal_2006,
+	title = {The unequal variance \textit{t}-test is an underused alternative to {Student}'s \textit{t}-test and the {Mann}–{Whitney} \textit{{U}} test},
+	volume = {17},
+	issn = {1045-2249},
+	url = {https://doi.org/10.1093/beheco/ark016},
+	doi = {10.1093/beheco/ark016},
+	abstract = {Often in the study of behavioral ecology, and more widely in science, we require to statistically test whether the central tendencies (mean or median) of 2 groups are different from each other on the basis of samples of the 2 groups. In surveying recent issues of Behavioral Ecology (Volume 16, issues 1–5), I found that, of the 130 papers, 33 (25\%) used at least one statistical comparison of this sort. Three different tests were used to make this comparison: Student's t-test (67 occasions; 26 papers), Mann–Whitney U test (43 occasions; 21 papers), and the t-test for unequal variances (9 occasions; 4 papers). My aim in this forum article is to argue for the greater use of the last of these tests. The numbers just related suggest that this test is not commonly used. In my survey, I was able to identify tests described simply as “t-tests” with confidence as either a Student's t-test or an unequal variance t-test because the calculation of degrees of freedom from the 2 sample sizes is different for the 2 tests (see below). Hence, the neglect of the unequal variance t-test illustrated above is a real phenomenon and can be explained in several (nonexclusive ways) ways:Argument 4 relies on the central limit theorem and would require a combined sample size of at least 30 (Sokal and Rohlf 1987, p. 107); however, in my survey, the majority (47 out of 61) of tests for which sample sizes were provided had a combined sample size below 30. The fallacy of argument 3 has been demonstrated previously on several occasions (e.g., Kasuya 2001; Neuhauser 2002). To explore argument 1 further, imagine that we have 2 sample groups (labeled “1” and “2,” with means [μ1 and μ2], variances [{\textbackslash}batchmode {\textbackslash}documentclass[fleqn,10pt,legalpaper]\{article\} {\textbackslash}usepackage\{amssymb\} {\textbackslash}usepackage\{amsfonts\} {\textbackslash}usepackage\{amsmath\} {\textbackslash}pagestyle\{empty\} {\textbackslash}begin\{document\} {\textbackslash}(s\_\{1\}{\textasciicircum}\{2\}{\textbackslash}) {\textbackslash}end\{document\} and {\textbackslash}batchmode {\textbackslash}documentclass[fleqn,10pt,legalpaper]\{article\} {\textbackslash}usepackage\{amssymb\} {\textbackslash}usepackage\{amsfonts\} {\textbackslash}usepackage\{amsmath\} {\textbackslash}pagestyle\{empty\} {\textbackslash}begin\{document\} {\textbackslash}(s\_\{2\}{\textasciicircum}\{2\}{\textbackslash}) {\textbackslash}end\{document\}], and sample sizes [N1 and N2]). For the unpaired Student's t-test, the t statistic is calculated as(1){\textbackslash}batchmode {\textbackslash}documentclass[fleqn,10pt,legalpaper]\{article\} {\textbackslash}usepackage\{amssymb\} {\textbackslash}usepackage\{amsfonts\} {\textbackslash}usepackage\{amsmath\} {\textbackslash}pagestyle\{empty\} {\textbackslash}begin\{document\} {\textbackslash}[t\{=\}{\textbackslash}frac\{{\textbackslash}mathrm\{\{{\textbackslash}mu\}\}\_\{1\}\{-\}{\textbackslash}mathrm\{\{{\textbackslash}mu\}\}\_\{2\}\}\{s\_\{p\}{\textasciicircum}\{2\}{\textbackslash}sqrt\{{\textbackslash}left({\textbackslash}frac\{1\}\{n\_\{1\}\}\{+\}{\textbackslash}frac\{1\}\{n\_\{2\}\}{\textbackslash}right)\}\},{\textbackslash}] {\textbackslash}end\{document\}where the pooled variance {\textbackslash}batchmode {\textbackslash}documentclass[fleqn,10pt,legalpaper]\{article\} {\textbackslash}usepackage\{amssymb\} {\textbackslash}usepackage\{amsfonts\} {\textbackslash}usepackage\{amsmath\} {\textbackslash}pagestyle\{empty\} {\textbackslash}begin\{document\} {\textbackslash}(s\_\{p\}{\textasciicircum}\{2\}{\textbackslash}) {\textbackslash}end\{document\} is given by(2){\textbackslash}batchmode {\textbackslash}documentclass[fleqn,10pt,legalpaper]\{article\} {\textbackslash}usepackage\{amssymb\} {\textbackslash}usepackage\{amsfonts\} {\textbackslash}usepackage\{amsmath\} {\textbackslash}pagestyle\{empty\} {\textbackslash}begin\{document\} {\textbackslash}[s\_\{p\}{\textasciicircum}\{2\}\{=\}{\textbackslash}frac\{(n\_\{1\}\{-\}1)s\_\{1\}{\textasciicircum}\{2\}\{+\}(n\_\{2\}\{-\}1)s\_\{2\}{\textasciicircum}\{2\}\}\{n\_\{1\}\{+\}n\_\{2\}\{-\}2\}.{\textbackslash}] {\textbackslash}end\{document\}The variances of the 2 samples are pooled in order to achieve the best estimate of the (assumed equal) variances of the 2 populations. Hence, we can see the need for the underlying assumption of equal population variances in this test. The Student's t-test performs badly when these variances are actually unequal, both in terms of Type I and Type II errors (Zar 1996). Figure 1 suggests that unequal sample variances are common in behavioral ecology. Although it is true that unequal variances are less problematic if sample sizes are similar, in practice, we often have quite unequal sample sizes (Figure 2). Hence, I suggest that the Student's t-test is frequently used in behavioral ecology when one of its important underlying assumptions is violated, and consequently, its performance is unreliable.},
+	number = {4},
+	urldate = {2025-07-17},
+	journal = {Behavioral Ecology},
+	author = {Ruxton, Graeme D.},
+	month = jul,
+	year = {2006},
+	pages = {688--690},
+	file = {Full Text PDF:/Users/cooperj2/Zotero/storage/I4TYM6Q2/Ruxton - 2006 - The unequal variance t-test is an underused altern.pdf:application/pdf;Snapshot:/Users/cooperj2/Zotero/storage/WEGWA4FR/215960.html:text/html},
+}
+
