--- a/references.bib
+++ b/references.bib
@@ -141,3 +141,24 @@
 	file = {Full Text PDF:/Users/cooperj2/Zotero/storage/I4TYM6Q2/Ruxton - 2006 - The unequal variance t-test is an underused altern.pdf:application/pdf;Snapshot:/Users/cooperj2/Zotero/storage/WEGWA4FR/215960.html:text/html},
 }
 
+
+@article{cooper_data_2021,
+	title = {Data from: {Multiple} lines of evidence indicate ongoing allopatric and parapatric diversification in an {Afromontane} sunbird (\textit{{Cinnyris} reichenowi})},
+	copyright = {All rights reserved},
+	doi = {10.5061/dryad.34tmpg4j0},
+	author = {Cooper, Jacob C. and Maddox, J. Dylan and McKague, Kellie and Bates, John M.},
+	year = {2021},
+}
+
+@article{cooper_multiple_2021,
+	title = {Multiple lines of evidence indicate ongoing allopatric and parapatric diversification in an {Afromontane} sunbird (\textit{{Cinnyris} reichenowi})},
+	volume = {138},
+	copyright = {All rights reserved},
+	doi = {10.1093/ornithology/ukaa081},
+	number = {2},
+	journal = {Ornithology},
+	author = {Cooper, Jacob C. and Maddox, J. Dylan and McKague, Kellie and Bates, John M.},
+	year = {2021},
+	pages = {ukaa081},
+	file = {Full Text PDF:/Users/cooperj2/Zotero/storage/QIFNBAEK/Cooper et al. - 2021 - Multiple lines of evidence indicate ongoing allopa.pdf:application/pdf;Full Text PDF:/Users/cooperj2/Zotero/storage/LQZZ9SUT/Cooper et al. - 2021 - Multiple lines of evidence indicate ongoing allopa.pdf:application/pdf;Snapshot:/Users/cooperj2/Zotero/storage/ZCADH382/6178384.html:text/html},
+}
